--- a/[1장] 웹 개발/1_2. 자바스크립트의 한계.md
+++ b/[1장] 웹 개발/1_2. 자바스크립트의 한계.md
@@ -6,25 +6,30 @@
 <hr>
 
 ## 2. 동적 타이핑 시스템의 한계
->```//이 함수는 숫자 a, b의 합을 반환한다.
+```javascript
+//이 함수는 숫자 a, b의 합을 반환한다.
  const sumNumber = (a, b) => {
     return a + b;
  };
 
- sumNumber(1, 2); //3 ```
+ sumNumber(1, 2); //3 
+ ```
+
 이 코드를 실행하면 에러도 발생하지 않고 정상적으로 동작한다.
 
->```// 이 함수는 숫자 a, b의 합을 반환한다
+```javascript
+// 이 함수는 숫자 a, b의 합을 반환한다
  const sumNumber = (a, b) => {
   return a + b;
  }
 
  sumNumber(100); // NaN
- sumNumber("a", "b"); // ab```
- 
+ sumNumber("a", "b"); // ab
+ ```
  sumNumber 함수를 실행할 때 숫자가 아닌 문자를 전달했다는 것이다. 다만, 어떤 에러도 발생하지 않고 정상적으로 동작한다. 해당 함수는 하나의 숫자만
  전달했을 때도 오류없이 NaN 값을 반환하거나, 문자열의 합을 구하는데도 사용될 수 있다. 왜냐하면 자바스크립트는 동적 타입 언어이자 관대한 언어이기 때문이다.
  동적 타입 언어라는 특성 때문에 sumNumber 함수를 호출할 때 사용되는 인수 값에 따라 a와 b의 타입이 결정된다.
+
 <hr>
 
  ## 3. 한계 극복을 위한 해결 방안 
