[feat] Typescript add

--- a/[1장] 웹 개발/1_1.웹개발 역사.md
+++ b/[1장] 웹 개발/1_1.웹개발 역사.md
@@ -1,48 +1,56 @@
 # 1.1 웹 개발의 역사
+
 ======================
 
 ## 1. 자바스크립트의 탄생
- - 1995년 넷스케이프 브랜든 아이크는 웹의 다양한 콘텐츠를 표현하기 위해 이미지, 플러그인 요소를 쉽게 조절할 수 있는 언어로 자바스크립트(JavaScript)를 만들었다.
- - 자바스크립트는 객체 지향 언어인 셀프의 프로토타입 기반 상속 개념과 Lisp 계열언어 중 스킴(Scheme)의 함수 개념을 차용하였음.
+
+- 1995년 넷스케이프 브랜든 아이크는 웹의 다양한 콘텐츠를 표현하기 위해 이미지, 플러그인 요소를 쉽게 조절할 수 있는 언어로 자바스크립트(JavaScript)를 만들었다.
+- 자바스크립트는 객체 지향 언어인 셀프의 프로토타입 기반 상속 개념과 Lisp 계열언어 중 스킴(Scheme)의 함수 개념을 차용하였음.
 <hr>
 
 ## 2. 자바스크립트 표준, ECMASript의 탄생
+
 - 인터넷 익스플로러, 내비게이터의 DOM 구조가 달라 웹 페이지가 다르게 동작 혹은 제대로 동작하지 않는 크로스 브라우징(Cross Browsing)이슈 발생
 
 - 새로운 버전의 브라우저가 출시되어 자바스크립트의 신기능을 지원하더라도 예전 버전의 브라우저를 사용하면 쓸모가 없었다. 해당 문제를 해결하기 위해 자바스크립트에 폴리필(Polyfill)과 트랜스파일(transpile)같은 개념 등장
 
 **폴리필(Polyfill)과 트랜스파일(transpile)**
-```폴리필은 브라우저가 지원하지 않는 코드를 브라우저에서 사용할 수 있도록 변환한 코드 조각이나 플러그인. 
+
+```폴리필은 브라우저가 지원하지 않는 코드를 브라우저에서 사용할 수 있도록 변환한 코드 조각이나 플러그인.
 트랜스파일은 최신 버전의 코드를 예전 코드로 변환하는 과정을 말한다. 유명한 폴리필 라이브러리로 core.js와 polyfill.io를 들 수 있고, 대표적인 트랜스파일러로는 바벨(Bable)이 있다.
 ```
+
 <hr>
 
 ## 3. 웹 사이트에서 웹 애플리케이션으로의 전환
-- 웹사이트와 웹 애플리케이션의 차이는? 일방적으로 게시된 정보를 확인하는 형태인 정적인 웹사이트를 넘어 사용자가 직접 정보를 생산하고 공유할 수 있는 웹 애플리케이션이 등장하였다. 
-웹 사이트는 무엇이고 웹 애플리케이션은 무엇인지?
+
+- 웹사이트와 웹 애플리케이션의 차이는? 일방적으로 게시된 정보를 확인하는 형태인 정적인 웹사이트를 넘어 사용자가 직접 정보를 생산하고 공유할 수 있는 웹 애플리케이션이 등장하였다.
+  웹 사이트는 무엇이고 웹 애플리케이션은 무엇인지?
 
 **웹사이트**
 웹 사이트도 HTML, CSS와 더불어 자바스크립트로 구축한 사례가 있다.
 여기서 중요한 것은 웹사이트는 수집된 데이터 및 정보를 특정 페이지에 표시하기 위한 정적인 웹이다. 단방향으로 정보를 제공하여 사용자와 상호 작용하지 않고, HTML에 링크가 연결도니 웹 페이지 모음으로 콘텐츠가 동적으로 업데이트가 안된다.
+
 <hr>
 
 **웹 애플리케이션**
 웹 애플리케이션은 사용자와 상호작용하는 쌍방향 소통의 웹을 말한다. 검색, 댓글, 채팅, 좋아요 기능 등 웹 페이지 내부에 수많은 애플리케이션이 동작하고 있기에 웹 애플리케이션이라고 부른다.
 현재 우리가 접하는 대부분의 웹 사이트는 웹 애플리케이션이고, 본격적으로 웹 애플리케이션 시대를 연 서비스 중 하나가 구글지도였다. 구글 지도는 길을 찾기 위해 사용자가 직접 출발지와 도착지를 입력할 수 있다는 점에서 쌍방향 소통이 가능한 웹 애플리케이션이다.
+
 <hr>
 
 ## 4. 개발 생태계의 발전
+
 대규모 웹 서비스 개발의 필요성이 커지면서 컴포넌트 단위로 개발하는 방식이 생겼다. 자바스크립트의 비동기 요청을 사용하여 페이지의 일부 데이터를 로드할 수 있게 되었다. 사용자마다 부분적으로 다른 화면을 렌더링 할 수 있게 되었다.
 웹 서비스는 페이지에서 애플리케이션의 특성을 가지게 되었다. 최근 사용자는 저마다의 디바이스에 최적화된 UX/UI를 기대한다.
 이에, 컴포넌트 베이스 개발(Component Based Development) 약칭 CBD방법론이 등장했다.
 CBD는 서비스에서 다루는 데이터를 구분하고 그에 맞는 UI를 표현할 수 있게 컴포넌트 단위로 개발하는 접근 방식이다.
 
 **컴포넌트 베이스 개발(Component Based Development, CBD)**
-```재사용할 수 있는 컴포넌트를 개발 또는 조합해서 하나의 애플리케이션을 만드는 개발 방법론.
-```
+`재사용할 수 있는 컴포넌트를 개발 또는 조합해서 하나의 애플리케이션을 만드는 개발 방법론.`
 
 컴포넌트는 하나의 독립된 기능을 재사용하기 위한 코드 묶음. 모듈과 달리 런타임 환경에서 독립적으로 배포, 실행될 수 있는 단위이다. 다른 컴포넌트와의 의존성을 최소화하거나 없애야 한다.
 
 ## 5. 개발자 협업의 필요성 증가
-내가 만든 함수가 아니라면? 개발에 투입된 인원이 5 ~ 10명이면? 대규모 프로덕트를 개발하고 나서 자바스크립트는 과연 유지보수에 적합할까?
 
+내가 만든 함수가 아니라면? 개발에 투입된 인원이 5 ~ 10명이면? 대규모 프로덕트를 개발하고 나서 자바스크립트는 과연 유지보수에 적합할까?
