--- a/[1장] 웹 개발/1_2. 자바스크립트의 한계.md
+++ b/[1장] 웹 개발/1_2. 자바스크립트의 한계.md
@@ -1,45 +1,84 @@
- # 1.2 자바스크립트의 한계
+# 1.2 자바스크립트의 한계
+
 <hr>
 
- ## 1. 동적 타입 언어
- 자바스크립트는 동적 타입 언어이다. 변수에 타입을 명시적으로 지정하지 않고 코드가 실행되는 런타임에 변수값이 할당될 때 해당 값의 타입에 따라 변수 타입이 결정되는 것을 의미한다. 변수 a의 타입이 number인지 string인지는 실제 코드가 동작할 때 a에 값이 할당되는 순간, 1인지 '1'인지에 따라 결정한다.
+## 1. 동적 타입 언어
+
+자바스크립트는 동적 타입 언어이다. 변수에 타입을 명시적으로 지정하지 않고 코드가 실행되는 런타임에 변수값이 할당될 때 해당 값의 타입에 따라 변수 타입이 결정되는 것을 의미한다. 변수 a의 타입이 number인지 string인지는 실제 코드가 동작할 때 a에 값이 할당되는 순간, 1인지 '1'인지에 따라 결정한다.
+
 <hr>
 
 ## 2. 동적 타이핑 시스템의 한계
+
 ```javascript
 //이 함수는 숫자 a, b의 합을 반환한다.
- const sumNumber = (a, b) => {
-    return a + b;
- };
+const sumNumber = (a, b) => {
+  return a + b;
+};
 
- sumNumber(1, 2); //3 
- ```
+sumNumber(1, 2); //3
+```
 
 이 코드를 실행하면 에러도 발생하지 않고 정상적으로 동작한다.
 
 ```javascript
 // 이 함수는 숫자 a, b의 합을 반환한다
- const sumNumber = (a, b) => {
+const sumNumber = (a, b) => {
   return a + b;
- }
+};
 
- sumNumber(100); // NaN
- sumNumber("a", "b"); // ab
- ```
- sumNumber 함수를 실행할 때 숫자가 아닌 문자를 전달했다는 것이다. 다만, 어떤 에러도 발생하지 않고 정상적으로 동작한다. 해당 함수는 하나의 숫자만
- 전달했을 때도 오류없이 NaN 값을 반환하거나, 문자열의 합을 구하는데도 사용될 수 있다. 왜냐하면 자바스크립트는 동적 타입 언어이자 관대한 언어이기 때문이다.
- 동적 타입 언어라는 특성 때문에 sumNumber 함수를 호출할 때 사용되는 인수 값에 따라 a와 b의 타입이 결정된다.
+sumNumber(100); // NaN
+sumNumber("a", "b"); // ab
+```
+
+sumNumber 함수를 실행할 때 숫자가 아닌 문자를 전달했다는 것이다. 다만, 어떤 에러도 발생하지 않고 정상적으로 동작한다. 해당 함수는 하나의 숫자만
+전달했을 때도 오류없이 NaN 값을 반환하거나, 문자열의 합을 구하는데도 사용될 수 있다. 왜냐하면 자바스크립트는 동적 타입 언어이자 관대한 언어이기 때문이다.
+동적 타입 언어라는 특성 때문에 sumNumber 함수를 호출할 때 사용되는 인수 값에 따라 a와 b의 타입이 결정된다.
 
 <hr>
 
- ## 3. 한계 극복을 위한 해결 방안 
- 개발자들은 자바스크립트 인터페이스의 필요성을 느끼게 되었고 JSDoc, propTypes, 다트 같은 해결 방안이 등장했다.
- 
- ### JSDoc 
- JSDoc는 모듈, 네임스페이스, 클래스, 메서드, 매개변수 등에 대한 API 문서 생성 도구이다. 
+## 3. 한계 극복을 위한 해결 방안
 
- ### propTypes
- propTypes는 리액트에서 컴포넌트 props의 타입을 검사하기 위해 사용하는 속성이다. 다만, 전체 애플리케이션의 타입 검사를 하는데 사용할 수 없다.
+개발자들은 자바스크립트 인터페이스의 필요성을 느끼게 되었고 JSDoc, propTypes, 다트 같은 해결 방안이 등장했다.
 
- ### 다트
- 다트는 구글이 자바스크립트를 대체하기 위해 제시한 새로운 언어이다.
+### JSDoc
+
+JSDoc는 모듈, 네임스페이스, 클래스, 메서드, 매개변수 등에 대한 API 문서 생성 도구이다.
+
+### propTypes
+
+propTypes는 리액트에서 컴포넌트 props의 타입을 검사하기 위해 사용하는 속성이다. 다만, 전체 애플리케이션의 타입 검사를 하는데 사용할 수 없다.
+
+### 다트
+
+다트는 구글이 자바스크립트를 대체하기 위해 제시한 새로운 언어이다.
+
+ <hr>
+
+## 4. 타입스크립트의 등장
+
+자바스크립트 코드를 그대로 사용할 수 있었고, 아래와 같은 단점을 극복할 수 있기에 현재 대두되고 있다.
+
+> **슈퍼셋(Superset)**
+> 기존 언어에 새로운 기능과 문법을 추가해서 보완하거나 향상하는 것을 말한다.
+> 일반적으로 컴파일러등으로 기존 언어 코드로 변환되어 실행된다.
+
+### **안정성 보장**
+
+타입스크립트는 정적 타이핑을 제공한다. 컴파일 단계에서 타입 검사를 해주기에 자바스크립트를 사용했을 때 발생하는 타입 에러르 줄일 수 있고, 런타임 에러를 사전에 방지할 수 있어 안전성이 크게 높아진다.
+
+### **개발 생산성 향상**
+
+IDE에서 타입 자동 완성 기능을 제공한다. 리액트를 사용할 때 prop을 넘겨야 하는 지 사용부에서 바로 볼 수 있어 개발 생산성이 향상된다.
+
+### **협업에 유리**
+
+복잡한 애플리케이션 개발, 협업에 유리하다. 인터페이스(interface), 제네릭(generic) 등을 지원하는데 인터페이스가 기술되면 코드를 더 쉽게 이애할 수 있도록 도와준다.
+자동완성기능이나 기술된 인터페이스로 코드를 쉽게 파악할 수 있다.
+
+> **타입스크립트 인터페이스 (interface)**
+> 타입스크립트 인터페이스는 객체 구조를 정의하는 역할을 한다. 특정 객체가 가져야 하는 속성과 메서드의 집합을 인터페이스로 정의 후 객체가 구조를 따르게 한다.
+
+### 자바스크립트에 점진적으로 적용 가능
+
+일괄 전환이 아닌 점진적 도입이 가능하다. 단지 여러 사람이 거대하고 복잡해진 웹 애플리케이션을 개발할 때 생산성과 안전성을 할 때 타입스크립트가 좋은 선택지가 될 수 있다는 것을 의미한다.
