[feat] type annotation add

--- a/[2장] 타입/2_2. 타입스크립트의 타입 시스템.md
+++ b/[2장] 타입/2_2. 타입스크립트의 타입 시스템.md
@@ -4,7 +4,22 @@
 
 ## 1. 타입 애너테이션 방식
 
+타입 애너테이션(type annotation)은 변수나 상수 혹은 함수의 인자와 반환 값에 타입을 명시적으로 선언하여 어떤 타입 값이 저장될 것인지를 컴파일러에 직접 알려주는 문법이다.
+타입스크립트의 타입 선언 방식은 변수 이름 뒤에: type 구문을 붙여 데이터 타입을 명시해준다.
+
+```ts
+let isDone: boolean = false;
+let decimal: number = 6;
+let color: string = "blue";
+let list: number[] = [1, 2, 3];
+let x: [string, number]; // tuple
+```
+
+기존 자바스크립트 코드에 점진적으로 타입을 적용할 수 있는 특징을 가진다.
+
 ## 2. 구조적 타이핑
+
+타입은 이름으로 구분되며 컴파일 타임 이후에도 남아있다.
 
 ## 3. 구조적 서브타이핑
 
