--- a/[2장] 타입/2_2. 타입스크립트의 타입 시스템.md
+++ b/[2장] 타입/2_2. 타입스크립트의 타입 시스템.md
@@ -19,15 +19,191 @@ let x: [string, number]; // tuple
 
 ## 2. 구조적 타이핑
 
-타입은 이름으로 구분되며 컴파일 타임 이후에도 남아있다.
+타입은 이름으로 구분되며 컴파일 타임 이후에도 남아있다. 명목적으로 구체화한 타입 시스템(Nominal Reified Type Systems)이라고 부른다.
+
+```ts
+class Animal {
+  String name;
+  int age;
+}
+```
+
+명확한 상속 관계나 공통으로 가지고 있는 인터페이스가 없다면 타입은 서로 호환되지 않는다.
+
+```ts
+interface Developer {
+  faceValue: number;
+}
+
+interface BankNote {
+  faceValue: number;
+}
+
+let developer: Developer = { faceValue: 52 };
+let bankNote: BankNote = { faceValue: 10000 };
+
+developer = bankNote; // OK
+bankNote = developer; // OK
+```
+
+이름으로 타입을 구분하는 명목적인 타입 언어의 특징과 달리 타입스크립트는 구조로 타입을 구분한다. 구조적 타이핑(Structural type system)이라한다.
 
 ## 3. 구조적 서브타이핑
 
+타입스크립트에서는 특정 값이 string 또는 number 타입을 동시에 가질 수 있다.
+
+```ts
+type stringOrNumber = string | number;
+```
+
+집합으로 나타낼 수 있는 타입 시스템을 지탱하고 있는 개념이 바로 구조적 서브타이핑(Structural subtyping)이다.
+객체가 가지고 있는 속성(프로퍼티)을 바탕으로 타입을 구분하는것. 가진 속성이 동일하면 서로 호환이 가능한 동일한 타입으로 여긴다.
+
+```ts
+interface Pet {
+  name: string;
+}
+
+interface Cat {
+  name: string;
+  age: number;
+}
+
+let pet: Pet;
+let cat: Cat = { name: "Yo", age: 2 };
+
+pet = cat; // OK
+```
+
+Cat은 Pet과 다른 타입으로 선언, Pet이 갖고 있는 name이라는 속성이 있어 Cat 타입으로 선언한 cat을 Pet 타입으로 선언한 pet에 할당이 가능하다.
+
+```ts
+interface Pet {
+  name: string;
+}
+let cat = { name: "Yo", age: 2 };
+
+function greet(pet: Pet) {
+  console.log("하이," + pet.name);
+}
+
+greet(cat); // OK
+```
+
+greet() 함수의 매개변수에 들어갈 수 있는건 Pet 타입으로 제한되어있다. 타입을 명시하지 않은 cat 객체를 greet() 함수 인자로 전달해도 코드는 정상저으로 실행된다.
+cat 객체는 Pet 인터페이스가 가진 name 속성을 가지고 있어 name 속성에 접근할 수 있다. 클래스 예시
+
+```ts
+class Person {
+  name: string;
+  age: number;
+
+  constructor(name: string, age: number) {
+    this.name = name;
+    this.age = age;
+  }
+}
+
+class Developer {
+  name: string;
+  age: number;
+  sleepTime: number;
+
+  constructor(name: string, age: number, sleepTime: number) {
+    this.name = name;
+    this.age = age;
+    this.sleepTime = sleepTime;
+  }
+}
+
+function greet(p: Person) {
+  console.log(`안녕, 내 이름은" ${p.name}`);
+}
+
+const developer = new Developer("Yo", 33, 7);
+
+greet(developer); // 안녕, 내 이름은 Yo
+```
+
+greet(developer)는 정상적으로 동작. 이유는 Developer는 Person이 갖고 있는 속성을 가지고 있기 때문이다.
+서로 다른 두 타입 간의 호환성은 타입 내부의 구조에 의해 결정된다. 타입 A가 타입 B의 서브타입이면 A 타입의 인스턴스는 B 타입이 필요한 곳에 위치할 수 있다. 타입이 계층 구조로 자유롭다.
+
 ## 4. 자바스크립트를 닮은 타입스크립트
+
+타입스크립트의 타입 시스템은 구조적 서브타이핑을 사용한다. 명목적 타이핑은 타입의 동일성(equivalence)을 확인하는 과정에서 구조적 타이핑에 비해 조금 더 안전하다.
+타입스크립트가 구조적 타이핑을 채택한 이유는 자바스크립트를 모델링한 언어이기 때문이다. 자바스크립트는 본질적으로 덕 타이핑(duck typing)을 기반으로 한다.
+덕 타이핑은 함수의 매개변수값이 올바르게 주어진다면 값이 어떻게 만들어졌는지 신경 쓰지 않고 사용하는 개념이다.
+덕 타이핑과 구조적 타이핑의 차이는 타입을 검사하는 시점에 있다. 덕타핑은 런타임에 타입을 검사하고 구조적 타이핑은 컴파일타임에 타입체커가 타입을 검사한다.
+덕 타이핑, 구조적 타이핑 모두 객체 변수, 메서드 같은 필드를 기반으로 타입을 검사하는 것은 동일하다. 하지만, 타입을 검사하는 시점이 다르다.
+
+> **덕 타이핑**
+> 어떤 타입에 부합하는 변수와 메서드를 가질 경우 해당 타입에 속하는 것으로 간주하는 방식이다. "만약 어떤 새가 오리처럼 걷고, 헤엄치며 꽥꽥 거리는 소리를 낸다면 나는 그 새를 오리라고 부를 것이다."
 
 ## 5. 구조적 타이핑의 결과
 
+```ts
+interface Cube {
+  width: number;
+  heigth: number;
+  depth: number;
+}
+
+function addLines(c: Cube) {
+  let total = 0;
+
+  for (const axis of Object.keys(c)) {
+    // Element implicitly has an 'any' type
+    // because expression of type 'string' can't be used to index type 'Cube'
+    const length = c[axis];
+
+    total += length;
+  }
+}
+```
+
+addLines() 함수의 매개변수 c는 Cube 타입으로 선언, Cube 인터페이스의 필드는 number 타입을 가져서 c[axis]는 number로 예상가능.
+c에 들어올 객체는 Cube의 width, heigth, depth 외에도 속성이든 가질 수 있어 c[axis]의 타입이 string일수도 있어 에러가 발생한다.
+
+```ts
+const namedCube = {
+  width: 6,
+  heigth: 5,
+  depth: 4,
+  name: "SweetCube", // string 타입의 추가 속성이 정의
+};
+
+addLines(namedCube); // OK
+```
+
+구조적 타이핑의 특징으로 name같은 추가 속성을 가진 객체도 할당할 수 있기에 발생하는 문제다. 이런 한계를 극복하고자 유니온(Discriminated Unions)같은 방법이 생겼다.
+
 ## 6. 타입스크립트의 점진적 타입 확인
+
+점진적으로 타입을 확인하는 언어다. 점진적 타입 검사는 컴파일 타임에 타입을 검사하면 필요에 따라 타입 선언 생략을 허용하는 방식이다. 타입 선언을 생략하면 암시적 타입 변환이 일어난다.
+
+```ts
+function add(x, y) {
+  return x + y;
+}
+
+//  위 코드는 아래와 같이 암시적 타입 변환이 일어난다
+function add(x: any, y: any): any;
+```
+
+add() 함수의 매개변수 x와 y에 타입을 선언하지 않았으나,컴파일러는 add() 함수의 반환값을 모두 any 타입으로 추론한다.
+타입스크립트에서 컴파일 하는데 모든 타입을 알아야 하는 것은 아니지만, 컴파일타임에 프로그램의 모든 타입을 알고 있을 때 최상의 결과가 나온다.
+타입이 올바르게 정해지지 않으면 런타임에서 에러가 발생할 때도 있다.
+
+```ts
+const names = ["zig", "colin"];
+console.log(names[2].toUpperCase());
+// TypeError: "toUpperCase" of undefined
+```
+
+> any 타입
+> 타입스크립트에서 any 타입은 모든 타입 종류를 포함하는 가장 상위 타입으로 어떤 타입 값이든 할당할 수 있다. 단, 컴파일 옵션인 noImplicitAny 값이 true 일 때는 에러가 발생한다. noImplicitAny는 타입
+> 애너테이션이 없을 때 변수가 any 타입으로 추론되는 것을 허락하지 않는다. noImplicitAny이 켜져 있다면 앞의 예시에서는 다음과 같은 에러가 발생할 것이다.
+> Parameter 'x' implicitly has an 'any' type. Parameter 'y' implicitly 'y' implicitly has an 'any' type.
 
 ## 7. 자바스크립트 슈퍼셋으로서의 타입스크립트
 
