--- a/[2장] 타입/2_2. 타입스크립트의 타입 시스템.md
+++ b/[2장] 타입/2_2. 타입스크립트의 타입 시스템.md
@@ -207,4 +207,178 @@ console.log(names[2].toUpperCase());
 
 ## 7. 자바스크립트 슈퍼셋으로서의 타입스크립트
 
+타입스크립트는 정적인 타이핑을 추가한 것으로 상위 집합이다.
+
+```ts
+function greet(name: string) {
+  console.log("안녕하세요", name);
+}
+```
+
+자바스크립트 런타임에서는 오류가 발생한다.
+
+```ts
+let developer = "Colin";
+consoloe.log(developer.toUppercase());
+```
+
+이 코드를 타입스크립트 컴파일러로 실행하면 다음과 같은 오류가 발생한다.
+
+```ts
+//Property 'toUppercase' does not exist on type 'string'.
+// Did you mean 'toUpperCase'?
+```
+
+타입스크립트는 초깃값(Colin)을 타입을 추론해서 toUpperCase 메서드로 대체할 것을 제안한다.
+
 ## 8. 값 vs 타입
+
+값(value) 프로그램이 처리하기 위해 메모리에 저장하는 모든 데이터다. 문자열, 숫자, 변수, 매개변수 등이 값에 해당한다.
+객체 역시 값이다. 자바스크립트에서는 함수도 값이다. 자바스크립트 함수는 런타임에 객체로 변환된다.
+
+```ts
+// 함수
+function goWork(developer) {
+  console.log(`tired ${developer}`);
+}
+```
+
+연산(evaluate)한것으로 변수에 할당할 수 있다.
+
+> 일반적으로 evaluate를 "평가한다"는 뜻으로 해석하고 프로그래밍에서는 값을 구하다 또는 문제를 푼다는 의미로 이해한다.
+
+```js
+const developer = "zig";
+```
+
+타입스크립트는 변수, 매개변수, 객체 속성 등에 : type 형태로 타입을 명시한다.
+
+```ts
+const a: string = "hello";
+const b: number = 2024;
+const c: boolean = true;
+const d: number[] = [1, 2, 3];
+```
+
+또는 type이나 interface 키워드로 커스텀 타입을 정의할 수 있다.
+
+```ts
+type Person = {
+  name: string;
+  age: number;
+};
+
+interface Person {
+  name: string;
+  age: number;
+}
+```
+
+값 공간과 타입 공간의 이름은 충돌하지 않기 때문에 타입과 변수를 같은 이름으로 정의할 수 있고, 이건 슈퍼셋인 것과 관련이 있다.
+타입스크립트 type으로 선언한 내용은 자바스크립트 런타임에서 제거되어 값 공간과 타입 공간은 서로 충돌하지 않는다.
+타입은 주로 타입 선언(:) 혹은 단언 문(as)로 작성하고 값은 할당 연산자인 =으로 작성한다.
+
+```ts
+interface Developer {
+  name: string;
+  isWorking: boolean;
+}
+
+const developer: Developer = { name: "Zig", isWorking: true };
+```
+
+매개변수처럼 여러 개의 심볼이 함께 쓰이면 타입과 값을 명확하게 구분해야 한다.
+
+```js
+function email(options: { person: Person, subject: string, body: string }) {
+  // ...
+}
+```
+
+자바스크립트 구조 분해 할당을 사용하면 options 객체를 아래와 같이 쓸 수 있다.
+
+```js
+function email({ person, subject, body }) {
+  // ...
+}
+```
+
+타입스크립트에서는 값과 타입을 구분해서 작성해야한다.
+
+> _구조 분해 할당(Destructuring assignment)_
+> ES6부터 도입된 자바스크립트의 기능으로 자스 또는 타스에서 배열이나 객체의 속성을 개별변수로 분해하여 그 값을 변수에 할당하는 것을 말한다.
+
+```ts
+function emial({
+  person,
+  subject,
+  body,
+}: {
+  person: Person;
+  subject: string;
+  body: string;
+}) {
+  // ...
+}
+```
+
+클래스와 enum이다.
+자스 ES6에서 등장한 클래스는 객체 인스턴스를 쉽게 생성하기 위한 문법기능이다.
+
+```JS
+class Rectangle {
+  constructor(height, width) {
+    this.height = height;
+    this.width = width;
+  }
+}
+
+const rect1 = new Rectangle(5, 4);
+```
+
+클래스는 타입으로도 사용된다.
+
+```ts
+enum Direction {
+  Up, // 0
+  Down, // 1
+  Left, // 2
+  Right, // 3
+}
+```
+
+enum이 값 공간에서 사용되는 예
+
+```ts
+// 값 공간 예
+enum MyColors {
+  BLUE = "#0000FF",
+  YELLOW = "#FFFF00",
+  MINT = "#2AC1BC",
+}
+
+function whatMintColor(palette: { MINT: string }) {
+  return palette.MINT;
+}
+
+whatMintColor(MyColors); // OK
+```
+
+MyColors enum은 일반적인 객체처럼 동작한다.
+
+표 타입스크립트에서 자바스크립트의 키워드가 해석되는 방식
+| 키워드 | 값 | 타입 |
+|-------|----|------|
+| class | Y | Y |
+| const, let , var | Y | N |
+| enum | Y | Y |
+| function | Y | N |
+| interface | N | Y |
+| type | N | Y |
+| namespace | Y | N |
+
+## 9. 타입을 확인하는 방법
+
+```
+
+```
