--- a/[2장] 타입/2_2. 타입스크립트의 타입 시스템.md
+++ b/[2장] 타입/2_2. 타입스크립트의 타입 시스템.md
@@ -377,8 +377,76 @@ MyColors enum은 일반적인 객체처럼 동작한다.
 | type | N | Y |
 | namespace | Y | N |
 
+> **트리쉐이킹(tree-shaking)**
+> 자바스크립트, 타입스크립트에서 사용하지 않는 코드를 삭제하는 방식이다. ES6이후 최신 애플리케이션 개발 환경에서 웹팩(Webpack), 롤업(Rollup)같은 모듈 번들러를 사용한다. 번들링 작업을 수행할 때 사용하지 않는 코드는 자동으로 삭제된다.
+> CommonJS 모듈은 트리쉐이킹을 지원하지 않아, ES6 이후에는 파일 내 특정 모듈만 임포트하면 해당 모듈을 사용하지 않는 파일 코드는 삭제되어 더 작은 크기의 번들링 파일을 생성할 수 있게 되었다.
+
 ## 9. 타입을 확인하는 방법
 
+타입스크립트에서 typeof, instanceof 그리고 타입 단언을 사용해서 타입을 확인할 수 있다. typeof는 연산하기 전에 피연산자의 데이터 타입을 나타내는 문자열을 반환한다.
+typeof 연산자가 반환하는 값은 자바스크립트의 7가지 기본 데이터 타입(Boolean, null, unde-fined, Number, BigInt, String, Symbol)과 function(함수), 호스트 객체 그리고 object 객체가 될 수 있다.
+
+```ts
+typeof 2022; // number;
+typeof "yohan"; //"string"
+typeof true; // "boolean"
+typeof {}; // "object"
 ```
 
+값 공간과 타입 공간이 별도로 존재한다.
+
+```ts
+interface Person {
+  first: string;
+  last: string;
+}
+
+const person:Person {first:"zig", last: "song"};
+
+function email(options: {person:Person; subject: string; body: string}) {}
 ```
+
+typeof는 자바스크립트 런타임의 typeof 연산자가 된다.
+
+```ts
+const v1 = typeof person; // 값은 "object" const
+v2 = typeof email; // 값은 "function"
+```
+
+타입에서 사용된 typeof는 타입스크립트 타입을 반환한다.
+
+```ts
+type T1 = typeof person; // 타입은 Person
+type T2 = typeof email; // 타입은 (options: {person:Person; subject: string; body: string}) => void
+```
+
+person 변수가 interface Person 타입 선언으로 Person을 반환, eamil은 함수 시그니처 타입을 반환한다.
+
+typeof 연산자처럼 instanceof 연산자의 필터링으로 타입이 보장된 상태에서 안전하게 값의 타입을 정제하여 사용할 수 있다.
+
+```ts
+let error = unknown;
+
+if (error instanceof Error) {
+  showAlertModal(error.message);
+} else {
+  throw Error(error);
+}
+```
+
+타입 단언이라 부르는 문법 즉, as 을 사용해서 타입을 강제할 수 있다. 강제 형 변환과 유사한 기능을 제공한다.
+
+> 타입스크립트 코드는 자바스크립트로 변환되고 타입스크립트의 타입 시스템과 문법은 컴파일 단계에서 제거된다. 컴파일 단계에서는 타입 단언이 형 변환을 강제할 수 있으나 런타임에서는 효력을 발휘할 수 없다.
+
+```ts
+const loaded_text: unknown; // 어딘가에서 unknown 타입 값을 전달받았다고 가정
+
+const validateInputText = (text: string) => {
+  if (text.length < 10) return "최소 10글자 이상 입력해야 한다.";
+  return "정상 입력된 값이다.";
+};
+
+validateInputText(loaded_text as string); // as 키워드를 사용해서 string으로 강제하지 않으면 컴파일러 단계에서 에러 발생
+```
+
+타입 가드라는 패턴도 있으나 이는, 4.2에서 자세히 알아보자.
